--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NOTE TO GRADERS for CS4550:
 
-This is currently the code for my entire site (because the links would be broken for the reservation site):
+This is currently the code for my entire site (because the links would break if I changed the paths).
 
 All of the code for the Reservation site is in the reservation folder except for the reservation.css file in static/css
 
